--- a/service.css
+++ b/service.css
@@ -48,6 +48,19 @@ a:visited {
     
     
 }
+.service-title{
+    position: relative;
+    top: 175px;
+    font-size:20px;
+    left:35%
+}
+
+.main-titles{
+    text-align: right;
+    position: absolute;
+    right:55%;
+    top:276px;
+}
 
 .main-text{
     text-align: left;
